CMAKE_MINIMUM_REQUIRED( VERSION 2.4 )

PROJECT(Least_Squares)

##FIND_PACKAGE( Eigen3 REQUIRED )

SET ( CCMAKE_CXX_FLAGS -fopenmp )
SET ( CCMAKE_C_FLAGS -fopenmp )
SET ( CMAKE_EXE_LINKER_FLAGS -lgomp )

SET (EIGEN3_INCLUDE_DIR "$ENV{Eigen3_DIR}")
IF( NOT EIGEN3_INCLUDE_DIR )
	MESSAGE (Cannot find "EIGEN3_INCLUDE_DIR")
ENDIF()

INCLUDE_DIRECTORIES( ${EIGEN3_INCLUDE_DIR} )

SET (CMAKE_MODULE_PATH ${EIGEN3_INCLUDE_DIR}/cmake)

ADD_EXECUTABLE( Least_Squares Least_Squares.cpp )
